# glib-schannel

./: README.md  meson.build
tls/base/: gtlsconnection-base.h  gtlsinputstream-base.h  gtlsoutputstream-base.h  meson.build
tls/schannel/: gtlsbackend-schannel.c  gtlsbackend-schannel.h  gtlscertificate-schannel.c  gtlscertificate-schannel.h  gtlsclientconnection-schannel.c  gtlsclientconnection-schannel.h  gtlsconnection-schannel.c  gtlsconnection-schannel.h  gtlsdatabase-schannel.c  gtlsdatabase-schannel.h  gtlsmodule-schannel.c  gtlsmodule-schannel.h  gtlsserverconnection-schannel.c  gtlsserverconnection-schannel.h  gtlsutils-schannel.c  gtlsutils-schannel.h  meson.build
tls/tests/: certificate.c  connection.c  file-database.c  meson.build
tls/tests/files/: ca-alternative.pem  ca-key.pem  ca-roots-bad.pem  ca-roots.pem  ca.pem  chain.pem  client-and-key.pem  client-csr.pem  client-future.pem  client-key.pem  client-past.pem  client.pem  intermediate-ca-csr.pem  intermediate-ca-key.pem  intermediate-ca.pem  non-ca.pem  old-ca-key.pem  old-ca.pem  root-ca-csr.pem  server-and-key.pem  server-csr.pem  server-intermediate-csr.pem  server-intermediate-key.pem  server-intermediate.pem  server-key.der  server-key.pem  server-self.pem  server.der  server.pem  temp.pem
